סימממנווווו גם עם התמונות

--- a/Home.html
+++ b/Home.html
@@ -11,8 +11,8 @@
     <div class="wrapper">
       <header>
         <div class="header-top">
-          <h1>ארנון תמיד איתנו</h1>
           <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+          <h1>ארנון תמיד איתנו</h1>
         </div>
 
         <nav id="main-nav">
@@ -51,11 +51,15 @@
       </main>
 
       <footer>
-        <p><b>
-          "מה שבא בקלות, גם הולך בקלות, כל דבר צריך התמדה, עבודה קשה וזה פשוט
-          משתלם בסוף. מי שמתמיד, עובד קשה לא מוותר- מקבל תוצאות" -</b> לזכרו של סרן
-          במיל' ארנון משה אברהם בנבניסטי
-        </p>
+        <div class="footer-content">
+          <p>
+            <b
+              >"מה שבא בקלות, גם הולך בקלות, כל דבר צריך התמדה, עבודה קשה וזה
+              פשוט משתלם בסוף. מי שמתמיד, עובד קשה לא מוותר - מקבל תוצאות"</b
+            >
+            - לזכרו של סרן במיל' ארנון משה אברהם בנבניסטי
+          </p>
+        </div>
       </footer>
     </div>
 
