--- a/initiatives.html
+++ b/initiatives.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>יוזמות לזכרו של ארנון</title>
+    <title>זוכרים את ארנון</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/initiatives.css" />
   </head>
@@ -11,8 +11,8 @@
     <div class="wrapper">
       <header>
         <div class="header-top">
-          <h1>יוזמות לזכרו של ארנון</h1>
           <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+          <h1>ארנון תמיד איתנו</h1>
         </div>
 
         <nav id="main-nav">
@@ -26,27 +26,87 @@
       </header>
 
       <main>
-        <section class="intro-wrapper">
-          <div class="intro-text">
-            <h2>עשייה שממשיכה את הדרך</h2>
-            <p>
-              עמוד זה מרכז יוזמות והנצחות שנוצרו בהשראתו של ארנון – מיזמים חינוכיים, ערכיים, קהילתיים או אישיים.
-            </p>
+        <section class="intro">
+          <p>
+            קיימתם יוזמה לזכרו של ארנון? נשמח שתשתפו איתנו — כדי שנוכל להוסיף
+            אותה לעמוד ולהנציח אותה בלב 💜
+          </p>
+          <a
+            href="https://forms.gle/vvu9NGg7cZT3p9vt8"
+            target="_blank"
+            class="form-button"
+          >
+            שתפו יוזמה שנעשתה לזכרו
+          </a>
+        </section>
+
+        <section class="initiative-card">
+          <h3>הפינה של ארנון בחוות דאבל קיי</h3>
+          <p>
+            פינה בתוך חוות הסוסים בה ארנון בילה הרבה מאוד זמן, עם פסנתר שמייצג
+            את אהבתו העמוקה למוזיקה. <br />
+            יש בה מקומות ישיבה מוצלים, ומרחב קטן למדורה ולחברותא – בדיוק כפי
+            שאהב. <br />
+            מהפינה נשקף מגרש הרכיבה בו נהג לרכב, ומסלולי ריצה אותם ארנון עצמו
+            נהג לעשות – מסומנים בקישור למפה בהמשך.
+          </p>
+
+          <p class="links">
+            📍
+            <a href="https://waze.com/ul?q=חוות דאבל קיי" target="_blank"
+              >נווטו לפינה ב-Waze</a
+            >
+          </p>
+
+          <div class="carousel">
+            <div class="carousel-track">
+              <div class="carousel-item">
+                <video controls>
+                  <source src="images/DK corner-1.mp4" type="video/mp4" />
+                </video>
+              </div>
+              <div class="carousel-item">
+                <img src="images/DK corner-2.jpg" alt="DK Corner 2" />
+              </div>
+              <div class="carousel-item">
+                <img src="images/DK corner-3.jpg" alt="DK Corner 3" />
+              </div>
+              <div class="carousel-item">
+                <img src="images/DK corner-4.jpg" alt="DK Corner 4" />
+              </div>
+            </div>
           </div>
+
+          <h4>📍 מפת מסלולי הריצה</h4>
+          <p>
+            מהפינה יוצאים ארבעה מסלולים ייחודיים – מסומנים בצבעים לפי המרחק:
+            ירוק (2.8 ק״מ), כחול (4.6 ק״מ), סגול (6.5 ק״מ), וכתום (10 ק״מ). ניתן
+            להגדיל את המפה בלחיצה:
+          </p>
+
+          <a href="images/Running tracks.png" target="_blank">
+            <img
+              src="images/Running tracks.png"
+              alt="מפת מסלולים של ארנון"
+              class="running-map"
+            />
+          </a>
         </section>
       </main>
 
-
-       <footer>
-        <p><b>
-          "מה שבא בקלות, גם הולך בקלות, כל דבר צריך התמדה, עבודה קשה וזה פשוט
-          משתלם בסוף. מי שמתמיד, עובד קשה לא מוותר- מקבל תוצאות" -</b> לזכרו של סרן
-          במיל' ארנון משה אברהם בנבניסטי
-        </p>
+      <footer>
+        <div class="footer-content">
+          <p>
+            <b
+              >"מה שבא בקלות, גם הולך בקלות, כל דבר צריך התמדה, עבודה קשה וזה
+              פשוט משתלם בסוף. מי שמתמיד, עובד קשה לא מוותר - מקבל תוצאות"</b
+            >
+            - לזכרו של סרן במיל' ארנון משה אברהם בנבניסטי
+          </p>
+        </div>
       </footer>
     </div>
 
     <script src="js/script.js"></script>
-    <script src="js/editMode.js"></script>
   </body>
 </html>
