--- a/Home.html
+++ b/Home.html
@@ -48,6 +48,59 @@
             שיש לכם על או עם ארנון.
           </p>
         </section>
+
+        <section class="events-carousel">
+          <h3>אירועים שנערכו לזכרו של ארנון</h3>
+          <div class="carousel-wrapper">
+            <button
+              class="carousel-btn right"
+              onclick="scrollCarouselById('eventCarousel', -1)"
+            >
+              &#10095;
+            </button>
+            <button
+              class="carousel-btn left"
+              onclick="scrollCarouselById('eventCarousel', 1)"
+            >
+              &#10094;
+            </button>
+
+            <div class="carousel-scroll-wrapper" id="eventCarousel">
+              <div class="carousel-track">
+                <div class="carousel-item">
+                  <div class="carousel-inner">
+                    <img src="images/Event 1.jpg" alt="אירוע 1" />
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="carousel-inner">
+                    <img src="images/Event 2.jpg" alt="אירוע 2" />
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="carousel-inner">
+                    <img src="images/Event 3.jpg" alt="אירוע 3" />
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="carousel-inner">
+                    <img src="images/Event 4.jpg" alt="אירוע 4" />
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="carousel-inner">
+                    <img src="images/Event 5.jpg" alt="אירוע 5" />
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="carousel-inner">
+                    <img src="images/Event 6.jpg" alt="אירוע 6" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
 
       <footer>
