--- a/initiatives.html
+++ b/initiatives.html
@@ -59,10 +59,16 @@
           </p>
 
           <div class="carousel-wrapper">
-            <button class="carousel-btn left" onclick="scrollCarousel(-1)">
+            <button
+              class="carousel-btn left"
+              onclick="scrollCarouselById('carouselTrack', -1)"
+            >
               &#10095;
             </button>
-            <button class="carousel-btn right" onclick="scrollCarousel(1)">
+            <button
+              class="carousel-btn right"
+              onclick="scrollCarouselById('carouselTrack', 1)"
+            >
               &#10094;
             </button>
 
