--- a/initiatives.html
+++ b/initiatives.html
@@ -111,10 +111,9 @@
         <div class="footer-content">
           <p>
             <b
-              >"מה שבא בקלות, גם הולך בקלות, כל דבר צריך התמדה, עבודה קשה וזה
-              פשוט משתלם בסוף. מי שמתמיד, עובד קשה לא מוותר - מקבל תוצאות"</b
-            >
-            - לזכרו של סרן במיל' ארנון משה אברהם בנבניסטי
+              >"אם אתה רוצה- אתה יכול"</b
+            ><br />
+             לזכרו של סרן במיל' ארנון משה אברהם בנבניסטי
           </p>
         </div>
       </footer>
