תיקנים אחרונים במסך הבית

--- a/Home.html
+++ b/Home.html
@@ -34,9 +34,11 @@
           <div class="intro-text">
             <h2>על האתר</h2>
             <p>
-              האתר הזה נוצר כדי לאסוף את כל מי שאהבו את ארנון – לא כביוגרפיה
-              רשמית, אלא כמקום שבו כל אחד יכול לשתף זיכרון, תמונה, או יוזמה
-              שממשיכה את הדרך שהוא השאיר אחריו.
+              לזכור ולא לשכוח זה לא קלישאה, זה לא משהו שעושים פעם בשנה.  <br />
+              האתר הזה נוצר מתוך רצון להנציח, לזכור ולהזכיר – כל הזמן. לאסוף את
+              כל מה שיש, כל מה שמהדהד בנו, ולהפוך אותו למקום אחד שבו כל אחד
+              יכול להכיר אותך מחדש. <br />דרך סיפורים, תמונות ויוזמות – כל פיסה
+              שכולם מביאים איתם, נרקמת כאן תמונה שלמה שמספרת עלייך, על כולך.
             </p>
           </div>
         </section>
@@ -45,7 +47,8 @@
           <h3>רוצים לשתף?</h3>
           <p>
             תוכלו להיכנס לכל אחד מהדפים ולהעלות תמונה, לספר סיפור, או לשתף יוזמה
-            שיש לכם על או עם ארנון.
+            שיש לכם על או עם ארנון.<br /> הוסיפו לנו עוד זוויות על ארנון – כי כולנו
+            יודעים שהוא היה עולם ומלואו, עם כל כך הרבה צדדים, גוונים, וחיוך אחד שמלווה את כל מי שהכיר.
           </p>
         </section>
 
@@ -106,10 +109,8 @@
       <footer>
         <div class="footer-content">
           <p>
-            <b
-              >"אם אתה רוצה- אתה יכול"</b
-            ><br />
-             לזכרו של סרן במיל' ארנון משה אברהם בנבניסטי
+            <b>"אם אתה רוצה- אתה יכול"</b><br />
+            לזכרו של סרן במיל' ארנון משה אברהם בנבניסטי
           </p>
         </div>
       </footer>
