--- a/initiatives.html
+++ b/initiatives.html
@@ -17,7 +17,7 @@
 
         <nav id="main-nav">
           <ul>
-            <li><a href="home.html">דף הבית</a></li>
+            <li><a href="index.html">דף הבית</a></li>
             <li><a href="stories.html">סיפורים</a></li>
             <li><a href="gallery.html">תמונות</a></li>
             <li><a href="initiatives.html" class="active">יוזמות לזכרו</a></li>
