--- a/gallery.html
+++ b/gallery.html
@@ -18,7 +18,7 @@
 
         <nav id="main-nav">
           <ul>
-            <li><a href="home.html">דף הבית</a></li>
+            <li><a href="index.html">דף הבית</a></li>
             <li><a href="stories.html">סיפורים</a></li>
             <li><a href="gallery.html" class="active">תמונות</a></li>
             <li><a href="initiatives.html">יוזמות לזכרו</a></li>
