--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <nav id="main-nav">
           <ul>
-            <li><a href="home.html" class="active">דף הבית</a></li>
+            <li><a href="index.html" class="active">דף הבית</a></li>
             <li><a href="stories.html">סיפורים</a></li>
             <li><a href="gallery.html">תמונות</a></li>
             <li><a href="initiatives.html">יוזמות לזכרו</a></li>
