מעבר לדאטא בייס אחר

--- a/stories.html
+++ b/stories.html
@@ -77,9 +77,9 @@
         </div>
       </footer>
     </div>
-
+    <script type="module" src="js/firebase.js"></script>
     <script src="js/script.js"></script>
-    <script src="js/stories.js"></script>
+    <script type="module" src="js/stories.js"></script>
     <script src="js/editMode.js"></script>
   </body>
 </html>
