--- a/initiatives.html
+++ b/initiatives.html
@@ -12,7 +12,7 @@
       <header>
         <div class="header-top">
           <button class="menu-toggle" onclick="toggleMenu()">☰</button>
-          <h1>ארנון תמיד איתנו</h1>
+          <h1>ארנון תמיד איתנו🤍</h1>
         </div>
 
         <nav id="main-nav">
