--- a/stories.html
+++ b/stories.html
@@ -12,7 +12,7 @@
       <header>
         <div class="header-top">
           <button class="menu-toggle" onclick="toggleMenu()">☰</button>
-          <h1>סיפורים על ארנון</h1>
+          <h1>סיפורים על ארנון🤍</h1>
           <button class="exit-edit-btn" onclick="exitEditMode()">EXIT</button>
         </div>
 
