--- a/stories.html
+++ b/stories.html
@@ -36,7 +36,7 @@
         </section>
 
         <section class="story-form-wrapper">
-          <button class="toggle-form-btn" onclick="toggleStoryForm()">
+          <button class="toggle-form-btn">
             + שתפו את הסיפור שלכם
           </button>
 
