--- a/initiatives.html
+++ b/initiatives.html
@@ -42,13 +42,25 @@
 
         <section class="initiative-card">
           <h3>הפינה של ארנון בחוות דאבל קיי</h3>
+
           <p>
-            פינה בתוך חוות הסוסים בה ארנון בילה הרבה מאוד זמן, עם פסנתר שמייצג
-            את אהבתו העמוקה למוזיקה. <br />
-            יש בה מקומות ישיבה מוצלים, ומרחב קטן למדורה ולחברותא – בדיוק כפי
-            שאהב. <br />
-            מהפינה נשקף מגרש הרכיבה בו נהג לרכב, ומסלולי ריצה אותם ארנון עצמו
-            נהג לעשות – מסומנים בקישור למפה בהמשך.
+            פינה מיוחדת בחוות הסוסים דאבל קיי – בה ארנון בילה רבות. <br />
+            המקום כולל פסנתר שמסמל את אהבתו למוזיקה, מקומות ישיבה מוצלים ומרחב
+            למדורה ולחברותא – כפי שאהב.
+          </p>
+
+          <p>
+            מהפינה יוצאים ארבעה מסלולים מסומנים לריצה, בדיוק כפי שארנון נהג
+            לעשות עם נוף עוצר נשימה ומזג אוייר אופטימלי. <br />
+            המסלולים מסומנים בצבעים: ירוק (2.8 ק״מ), כחול (4.6 ק״מ), סגול (6.5
+            ק״מ) וכתום (10 ק״מ).
+          </p>
+
+          <p class="links">
+            🗺️
+            <a href="images/Running tracks.png" target="_blank"
+              >לחצו כאן לצפייה במפת המסלולים</a
+            >
           </p>
 
           <p class="links">
@@ -89,31 +101,83 @@
               </div>
             </div>
           </div>
+        </section>
 
-          <h4>📍 מפת מסלולי הריצה</h4>
+        <section class="initiative-card">
+          <h3>המקום של ארנון- גלריה• קפה • זיכרון</h3>
+
           <p>
-            מהפינה יוצאים ארבעה מסלולים ייחודיים – מסומנים בצבעים לפי המרחק:
-            ירוק (2.8 ק״מ), כחול (4.6 ק״מ), סגול (6.5 ק״מ), וכתום (10 ק״מ). ניתן
-            להגדיל את המפה בלחיצה:
+            גלריה וסטודיו של ורד, אמו של ארנון, אשר הפכו לאחר נפילתו לבית קפה
+            חברתי על שמו. <br />
+            במקום מתקיימות פעילויות חברתיות בהתנדבות מתוך ולמען הקהילה.
           </p>
 
-          <a href="images/Running tracks.png" target="_blank">
-            <img
-              src="images/Running tracks.png"
-              alt="מפת מסלולים של ארנון"
-              class="running-map"
-            />
-          </a>
+          <p>
+            בית הקפה שוכן ברחוב יפיפה בראש פינה העתיקה, וכולל גלריה לאמנות בה
+            מוצגים ציורים, עבודות קרמיקה, צורפות ותמונות של ארנון.
+          </p>
+
+          <p>
+            בגלריה מוצגות יצירותיה של ורד – אם, בת ואחות שכולה – בהן משתקפים
+            שלושה דורות של שכול, תקווה, אמונה ואהבה.
+          </p>
+
+          <p>המקום של ארנון הוא מקום למפגש רגוע ונעים – מקום של חיבור ואהבה.</p>
+
+          <p class="links">
+            🌐
+            <a href="https://arnons-place.co.il" target="_blank"
+              >כניסה לאתר הבית</a
+            ><br />
+            📷
+            <a
+              href="https://www.instagram.com/arnons_place?igsh=OWlmOG9mZGZicWpi"
+              target="_blank"
+              >הצצה באינסטגרם</a
+            ><br />
+            📍
+            <a href="https://waze.com/ul?q=המקום של ארנון" target="_blank"
+              >נווטו למקום ב-Waze</a
+            >
+          </p>
+
+          <div class="carousel-wrapper">
+            <button
+              class="carousel-btn left"
+              onclick="scrollCarouselById('cafeCarouselTrack', -1)"
+            >
+              &#10095;
+            </button>
+            <button
+              class="carousel-btn right"
+              onclick="scrollCarouselById('cafeCarouselTrack', 1)"
+            >
+              &#10094;
+            </button>
+
+            <div class="carousel-track" id="cafeCarouselTrack">
+              <div class="carousel-item">
+                <img src="images/cafe1.jpg" alt="קפה גלריה 1" />
+              </div>
+              <div class="carousel-item">
+                <img src="images/cafe2.jpg" alt="קפה גלריה 2" />
+              </div>
+              <div class="carousel-item">
+                <img src="images/cafe3.jpg" alt="קפה גלריה 3" />
+              </div>
+              <div class="carousel-item">
+                <img src="images/cafe4.jpg" alt="קפה גלריה 4" />
+              </div>
+            </div>
+          </div>
         </section>
       </main>
 
       <footer>
         <div class="footer-content">
           <p>
-            <b
-              >"אם אתה רוצה- אתה יכול"</b
-            ><br />
-             לזכרו של סרן במיל' ארנון משה אברהם בנבניסטי
+            <b>"אם אתה רוצה- אתה יכול"</b><br />
+            לזכרו של סרן במיל' ארנון משה אברהם בנבניסטי
           </p>
         </div>
       </footer>
