--- a/initiatives.html
+++ b/initiatives.html
@@ -44,14 +44,15 @@
           <h3>הפינה של ארנון בחוות דאבל קיי</h3>
 
           <p>
-            פינה מיוחדת בחוות הסוסים דאבל קיי – בה ארנון בילה רבות. <br />
-            המקום כולל פסנתר שמסמל את אהבתו למוזיקה, מקומות ישיבה מוצלים ומרחב
-            למדורה ולחברותא – כפי שאהב.
+            פינה מיוחדת בחוות הסוסים דאבל קיי, הממוקמת במושב שרונה שבגליל התחתון
+            – חווה בה ארנון בילה רבות. <br />
+            המקום כולל פסנתר שמסמל את אהבתו למוזיקה, מקומות ישיבה מוצלים, ומרחב
+            למדורה ולחברותא – בדיוק כפי שאהב.
           </p>
 
           <p>
-            מהפינה יוצאים ארבעה מסלולים מסומנים לריצה, בדיוק כפי שארנון נהג
-            לעשות עם נוף עוצר נשימה ומזג אוייר אופטימלי. <br />
+            מהפינה יוצאים ארבעה מסלולים מסומנים לריצה, כפי שארנון נהג לעשות,
+            בליווי נוף עוצר נשימה ומזג אוויר אופטימלי. <br />
             המסלולים מסומנים בצבעים: ירוק (2.8 ק״מ), כחול (4.6 ק״מ), סגול (6.5
             ק״מ) וכתום (10 ק״מ).
           </p>
